crates/aranya-policy-lang/tests/data/keyword_collision/struct_field_name.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Reserved identifier
  |
2 |     int int
  |     ^^^ found reserved identifier: `int`
